force-app/main/default/objects/b3o__Education_History__c/b3o__Education_History__c.object-meta.xml
<CustomObject>
    <label>Education History</label>
    <nameField>
        <displayFormat>EDU-H-{0}</displayFormat>
        <label>Education History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Education Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>