force-app/main/default/objects/b3o__Education_History__c/fields/b3o__Contact__c.field-meta.xml
<CustomField>
    <fullName>b3o__Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Education Histories</relationshipLabel>
    <relationshipName>Education_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>