force-app/main/default/objects/b3o__Education_History__c/fields/b3o__Degree_Program__c.field-meta.xml
<CustomField>
    <fullName>b3o__Degree_Program__c</fullName>
    <label>Degree / Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>