force-app/main/default/objects/b3o__Education_History__c/fields/b3o__Institution_Name__c.field-meta.xml
<CustomField>
    <fullName>b3o__Institution_Name__c</fullName>
    <label>Institution Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>