force-app/main/default/objects/b3o__Education_History__c/fields/b3o__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>b3o__Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>